--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <title>Speed Racer</title>
     <!-- Lib -->
-    <script src="./lib/p5.min.js"></script>
-    <script src="./lib/p5.dom.min.js"></script>
-    <script src="./lib/p5.sound.min.js"></script>
-    <script src="./lib/p5.play.js"></script>
+    <script src="p5.min.js"></script>
+    <script src="p5.dom.min.js"></script>
+    <script src="p5.sound.min.js"></script>
+    <script src="p5.play.js"></script>
 
     <!-- Sweet Alert-->
     <script
@@ -15,8 +15,8 @@
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
       crossorigin="anonymous"
     ></script>
-    <script src="./lib/sweetalert.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="./lib/sweetalert.css" />
+    <script src="sweetalert.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="sweetalert.css" />
 
     <link rel="stylesheet" href="style.css" />
 
@@ -39,9 +39,9 @@
     </script>
   </head>
   <body>
-    <script src="./js/Game.js"></script>
-    <script src="./js/Form.js"></script>
-    <script src="./js/Player.js"></script>
-    <script src="./sketch.js"></script>
+    <script src="Game.js"></script>
+    <script src="Form.js"></script>
+    <script src="Player.js"></script>
+    <script src="sketch.js"></script>
   </body>
 </html>
