--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 
     <script>
       var firebaseConfig = {
-        apiKey: "AIzaSyDn1OaNs6KCWivOLOHY-GXYk6ZmNDrksVQ",
-  authDomain: "car-game-9f866.firebaseapp.com",
-  databaseURL: "https://car-game-9f866-default-rtdb.firebaseio.com",
-  projectId: "car-game-9f866",
-  storageBucket: "car-game-9f866.appspot.com",
-  messagingSenderId: "561199496939",
-  appId: "1:561199496939:web:c4b308e399b9c96a3ec8ae"
+        apiKey: "AIzaSyD00zJs9gSaq-2uyWTGWX6UcEX_RVa7XYs",
+  authDomain: "car-game-git-hub.firebaseapp.com",
+  databaseURL: "https://car-game-git-hub-default-rtdb.firebaseio.com",
+  projectId: "car-game-git-hub",
+  storageBucket: "car-game-git-hub.appspot.com",
+  messagingSenderId: "274245507510",
+  appId: "1:274245507510:web:11a157a77f02d454d48917"
 };
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
