--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="sweetalert.min.js"></script>
+    <link rel="shortcut icon" type="image/icon" href="icon.png"
     <link rel="stylesheet" type="text/css" href="sweetalert.css" />
 
     <link rel="stylesheet" href="style.css" />
