--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
     <script src="p5.play.js"></script>
 
     <!-- Sweet Alert-->
-    <script
+    <script>
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
       crossorigin="anonymous"
-    ></script>
+    </script>
     <script src="sweetalert.min.js"></script>
-    <link rel="shortcut icon" type="image/icon" href="icon.png"
     <link rel="stylesheet" type="text/css" href="sweetalert.css" />
 
     <link rel="stylesheet" href="style.css" />
@@ -27,14 +26,14 @@
 
     <script>
       var firebaseConfig = {
-        apiKey: "AIzaSyD00zJs9gSaq-2uyWTGWX6UcEX_RVa7XYs",
-  authDomain: "car-game-git-hub.firebaseapp.com",
-  databaseURL: "https://car-game-git-hub-default-rtdb.firebaseio.com",
-  projectId: "car-game-git-hub",
-  storageBucket: "car-game-git-hub.appspot.com",
-  messagingSenderId: "274245507510",
-  appId: "1:274245507510:web:11a157a77f02d454d48917"
-};
+        apiKey: "AIzaSyDn1OaNs6KCWivOLOHY-GXYk6ZmNDrksVQ",
+        authDomain: "car-game-9f866.firebaseapp.com",
+        databaseURL: "https://car-game-9f866-default-rtdb.firebaseio.com",
+        projectId: "car-game-9f866",
+        storageBucket: "car-game-9f866.appspot.com",
+        messagingSenderId: "561199496939",
+        appId: "1:561199496939:web:c4b308e399b9c96a3ec8ae"
+      };
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
     </script>
