--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </script>
     <script src="sweetalert.min.js"></script>
     <link rel="stylesheet" type="text/css" href="sweetalert.css" />
-
+    <link rel="shortcut icon" type="image/icon" href="icon.png">
     <link rel="stylesheet" href="style.css" />
 
     <!-- Firebase -->
